// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pbehavior-general-form Renders \`pbehavior-general-form\` with custom props 1`] = `
<div
  class="layout column"
>
  <!---->
  <c-name-field-stub
    required=""
    value="pbehavior"
  />
  <div
    class="flex mt-3 xs12"
  >
    <c-enabled-field-stub
      class="mt-0 mb-1"
      hide-details=""
      label="Start on trigger"
      value="true"
    />
    <c-duration-field-stub
      required=""
      value="[object Object]"
    />
    <div
      class="layout"
    >
      <div
        class="flex xs6"
      >
        <c-pbehavior-reason-field-stub
          class="mr-2"
          required=""
          return-object=""
          value="[object Object]"
        />
      </div>
      <div
        class="flex xs6"
      >
        <c-pbehavior-type-field-stub
          class="ml-2"
          required=""
          return-object=""
          value="[object Object]"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`pbehavior-general-form Renders \`pbehavior-general-form\` with required props 1`] = `
<div
  class="layout column"
>
  <c-enabled-field-stub
    hide-details=""
  />
  <c-name-field-stub
    required=""
    value="pbehavior"
  />
  <div
    class="flex mt-3 xs12"
  >
    <!---->
    <div
      class="layout align-center"
    >
      <div
        class="flex xs3"
      >
        <div
          class="v-input mt-0 v-input--hide-details theme--light v-input--selection-controls v-input--checkbox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  check_box_outline_blank
                </i>
                <input
                  aria-checked="false"
                  role="checkbox"
                  type="checkbox"
                  value=""
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
              <label
                class="v-label theme--light"
                style="left: 0px; position: relative;"
              >
                Whole day
              </label>
            </div>
          </div>
        </div>
      </div>
      <!---->
      <div
        class="flex xs6"
      >
        <date-time-splitted-range-picker-field-stub
          end="Thu Mar 04 2021 13:33:20 GMT+0100 (Central European Standard Time)"
          endlabel="End"
          endmax="2026-03-04"
          endmin="2021-03-04"
          endrules="[object Object]"
          name="date-range"
          start="Thu Mar 04 2021 13:30:00 GMT+0100 (Central European Standard Time)"
          startlabel="Start"
          startrules="[object Object]"
        />
      </div>
    </div>
    <div
      class="layout"
    >
      <div
        class="flex xs6"
      >
        <c-pbehavior-reason-field-stub
          class="mr-2"
          required=""
          return-object=""
          value="[object Object]"
        />
      </div>
      <div
        class="flex xs6"
      >
        <c-pbehavior-type-field-stub
          class="ml-2"
          required=""
          return-object=""
          value="[object Object]"
        />
      </div>
    </div>
  </div>
</div>
`;
